--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,8 @@
             "name": "Flutter (lib\\pages\\homePage.dart)",
             "type": "dart",
             "request": "launch",
-            "program": "lib\\pages\\homePage.dart"
+            "program": "lib\\pages\\homePage.dart",
+            "args": ["-d", "Pixel_7_API_33"]
         }
     ]
 }
