--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,20 @@
 {
     "configurations": [
-        
         {
             "name": "Flutter (lib\\pages\\homePage.dart)",
             "type": "dart",
             "request": "launch",
             "program": "lib\\pages\\homePage.dart",
-            "args": ["-d", "Pixel_7_API_33"]
+            "args": [
+                "-d",
+                "Pixel_7_API_33"
+            ]
+        },
+        {
+            "name": "Flutter (lib\\main.dart)",
+            "type": "dart",
+            "request": "launch",
+            "program": "lib\\main.dart"
         }
     ]
 }
