--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
     sdk: flutter
   hive: 
   hive_flutter:
-
+  share_plus: ^6.2.0
+  url_launcher: ^6.0.20
+  mailto: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
