--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   url_launcher: ^6.0.20
   mailto: ^2.0.0
   fluttertoast: ^8.0.8
+  fl_chart:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
