--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,15 @@
 {
     "configurations": [
         {
-            "name": "Flutter (lib\\pages\\homePage.dart)",
+            "name": "Flutter (lib\\main.dart)",
             "type": "dart",
             "request": "launch",
-            "program": "lib\\pages\\homePage.dart",
+            "program": "lib\\main.dart",
             "args": [
                 "-d",
                 "Pixel_7_API_33"
             ]
         },
-        {
-            "name": "Flutter (lib\\main.dart)",
-            "type": "dart",
-            "request": "launch",
-            "program": "lib\\main.dart"
-        }
+        
     ]
 }
