--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,7 @@
 # packages, and plugins designed to encourage good coding practices.
 analyzer:
   errors:
+    must_be_immutable: ignore
     prefer_const_constructors: ignore
 include: package:flutter_lints/flutter.yaml
 
